--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             We are____ <br>to be here today with you
             to celebrate your___!<br>
             Although I'm excited for you both, I'm really here for the___!<br>
-            With my many years of wisdom, here is my best advice to pull you through the ___ <br>
+            With my many years of wisdom, here is my best advice to pull you through the ___years. <br>
            <br>
             ~Some advice for A Happy Marriage~<br>
             <br>
