--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -18,12 +19,12 @@
             <strong>~Some Advice For A Happy Marriage~</strong> 
             <br>
             <br>
-                        Don't forget that you should always, <input type="text" text=""placeholder="Noun"><br>
+                        Don't forget that you should always <input type="text" text=""placeholder="Noun">,<br>
             You should never <input type="text" text=""placeholder="Verb">.<br>
             May your <input type="text" text=""placeholder="Adjective"> lives be filled with<br>
             <input type="text" text=""placeholder="Noun"> and <input type="text" text=""placeholder="Noun">. <br>
             Cheers to the next <input type="text" text=""placeholder="Number"> Years!<br>
-            With love <input type="text" text=""placeholder="Your Name">!<br>
+            With love, <input type="text" text=""placeholder="Your Name">!<br>
                         <input type="submit" value="submit" text"submit">
        </h2>
         <p>
@@ -31,7 +32,7 @@
             We are____ <br>to be here today with you
             to celebrate your___!<br>
             Although I'm excited for you both, I'm really here for the___!<br>
-            With my many years of wisdom, here is my best advice to pull you through the ___years. <br>
+            With my many years of wisdom, here is my best advice to pull you through the ___years ahead. <br>
            <br>
             ~Some advice for A Happy Marriage~<br>
             <br>
